exports[`addTaskEpic success flow snapshot 1`] = `
<<<<<<< Updated upstream
=======
Array [
  Object {
    "serverId": "serverId",
    "tasks": Array [
      Object {
        "requirements": Object {
          "url": "/some-path",
        },
        "taskPayload": "taskPayload",
        "title": "task title",
      },
    ],
    "type": "addTask/INIT",
  },
  Object {
    "blocking": undefined,
    "delay": undefined,
    "id": "task id",
    "interval": undefined,
    "quantity": undefined,
    "requirements": Object {
      "url": "/some-path",
    },
    "reuse": undefined,
    "serverId": "serverId",
    "taskPayload": "taskPayload",
    "title": "task title",
    "type": "tasks/ADD",
  },
]
`;

exports[`test addTaskEpic 1`] = `
>>>>>>> Stashed changes
Array [
  Object {
    "serverId": "serverId",
    "tasks": Array [
      Object {
        "requirements": Object {
          "url": "/some-path",
        },
        "taskPayload": "taskPayload",
        "title": "task title",
      },
    ],
    "type": "addTask/INIT",
  },
  Object {
    "blocking": undefined,
    "delay": undefined,
    "id": "task id",
    "interval": undefined,
    "quantity": undefined,
    "requirements": Object {
      "url": "/some-path",
    },
    "reuse": undefined,
    "serverId": "serverId",
    "taskPayload": "taskPayload",
    "title": "task title",
    "type": "tasks/ADD",
  },
]
`;
